# certmaster

./: .gitignore
controller/: Cargo.toml
controller/kubernetes/: cloudflare.yaml  crd.yaml  digitalocean.yaml  error.yaml  ok.yaml  ok2.yaml  ok2_crd.yaml  ok_crd.yaml  ok_r53.yaml  route_53.yaml
controller/src/: cert_issuer.rs  certificate.rs  crd.rs  error.rs  lib.rs  main.rs  store.rs
controller/src/cert_issuer/: dns_provider.rs
controller/src/consts/: labels.rs
crds/: Cargo.toml
crds/src/: main.rs
