[package]
name = "certmaster"
version = "0.1.0"
authors = ["Praveen Perera <praveen@avencera.com>"]
edition = "2018"

[dependencies]
# async
futures = "0.3.5"
tokio = { version = "0.2", features = ["full"] }

# k8s
kube = "0.38.0"
kube-derive = "0.38.0"
kube-runtime = "0.38.0"
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_17"] }

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml= "0.8"

# log
env_logger = "0.7"
log = "0.4"

# error handling
anyhow = "1.0"
thiserror = "1.0"

# utils
chrono = "0.4"

# validations
rweb = { version = "0.5", features = ["openapi"] }
