[package]
name = "certmaster"
version = "0.1.0"
authors = ["Praveen Perera <praveen@avencera.com>"]
edition = "2018"

[dependencies]
# k8s
kube = "0.38.0"
kube-derive = "0.38.0"
kube-runtime = "0.38.0"
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_17"] }

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml= "0.8"

# errors
anyhow = "1.0"

# validations
rweb = { version = "0.5", features = ["openapi"] }
